# bdhei

./: .gitignore  CITATION.cff  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml  requirements.txt
configs/: example_run.ps1  research.template.ps1
docs/: method.md  release.md
examples/: README.md
examples/sample_spei/: SYNTHETIC_SITE_001_SPEI.csv
examples/sample_sti/: SYNTHETIC_SITE_001_STI_M_03.csv
src/bdhei/: __init__.py  batch.py  cli.py  copula_scores.py  core.py
tests/: compare_directory_outputs.py  regression_check.py
tools/: preflight_release.py
